[package]
name = "rustcalc-2"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = "1.16.0"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
regex = "1"
rustyline = "10.0.0"

[build-dependencies.lalrpop]
version = "0.19.8"
features = ["lexer"]
